Fixed rendering issue on Firefox

--- a/media/css/layout.css
+++ b/media/css/layout.css
@@ -18,7 +18,7 @@
 #info {
 	text-align: right;
 	margin-left: auto;
-	width: 230px;
+	width: 232px;
 }
 
 #name {
